change swagger-io dependency to springfox dependecy. It was adjusted unit class.
